FEAT: Edit filter
